# cinephile

./: .env.example  .gitignore  Dockerfile  README.md  SESSION_NOTES.md  docker-compose.yml  fly.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  embeddings.py  eval.py  eval_e2e.py  generation.py  main.py  models.py  retrieval.py  sessions.py
backend/app/agent/: graph.py  router.py  tools.py
backend/app/routes/: health.py  recommend.py  similar.py
backend/scripts/: embedding_ablation.py  expand_eval_ids.py  ingest.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MovieCard.jsx
